AOTCodeCompressedOopsTest.java failed with -XX:+UseLargePages

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 25
    • Affects Version/s: 25
    • Component/s: hotspot
    • b26

      [0.040s][info][aot] full module graph: enabled
      [0.040s][info][aot] CDS archive was created with max heap size = 128M, and the following configuration:
      [0.040s][info][aot] narrow_klass_base at mapping start address, narrow_klass_pointer_bits = 32, narrow_klass_shift = 0
      [0.040s][info][aot] narrow_oop_mode = 0, narrow_oop_base = 0x0000000000000000, narrow_oop_shift = 0
      [0.040s][info][aot] The current max heap size = 128M, G1HeapRegion::GrainBytes = 1048576
      [0.040s][info][aot] narrow_klass_base = 0x00007f4711000000, arrow_klass_pointer_bits = 32, narrow_klass_shift = 0
      [0.040s][info][aot] narrow_oop_mode = 0, narrow_oop_base = 0x0000000000000000, narrow_oop_shift = 0
      [0.040s][info][aot] heap range = [0x00000000f8000000 - 0x0000000100000000]
      [0.040s][info][aot] Preferred address to map heap data (to avoid relocation) is 0x00000000ffe00000
      [0.040s][info][aot] UseSharedSpaces: Unable to map at required address in java heap. 0x00000000ffe00000, size = 1448248 bytes
      [0.040s][error][aot] AOT cache has aot-linked classes but the archived heap objects cannot be loaded. Try increasing your heap size.
      [0.040s][error][aot] An error has occurred while processing the AOT cache. Run with -Xlog:aot for details.
      [0.040s][error][aot] unrecoverable error
      Error occurred during initialization of VM
      Unable to use AOT cache.

            Assignee:
            Ioi Lam
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: