8357693: AOTCodeCompressedOopsTest.java failed with -XX:+UseLargePages